css/section.css
.contact{
    background: #ffffff url(../images/backgroud/worldmap.png) no-repeat center center/cover;
    height: 100%;
    /* background-size:auto 100%; */
    /* padding-top: 30px; */
    font-size: 20px;
      /* position: relative; */
}

.customer-img {
    height: 360px;
    border: 2px;
    border-style: solid;
    border-color: #ffffff;
}

.customer-desc {
    font-size: 14px;
    padding-top: 20px
}

.customer-logo {
    height: 60px;
    padding-bottom: 20px;
}

.footer-menu {
    text-align: center;
}
.footer-menu li{
    display: inline;
    list-style: none;
    font-size: 13px;
    padding-top: 10px;
}

#footer{
    background-color: rgba(0,0,0,0.7);
    height: 50px;
    margin-bottom: -50px;
}


#footer #p{
    color: #418d49;
}
.footer-copyright a,
.footer-copyright p{
    color:rgb(255,255,255);
    font-size: 13px;
}

.footer-text {
    line-height: 50px;
    height: 50px;
    color: #f9f9f9;
    font-size: 12px;
}

.clearfix:after, .clearfix:before,

.app-header{
    /* background: #f5f5f5 url(../images/bottom.png); */
    /* background: rgb(28,96,149); */
    padding-top: 60px;
}

.app-title{
    padding-top: 20px;
}

.app-desc{
    /* display: block; */
    /* padding-top: 20px; */
    /* font-size: 10px; */
    font-size: 17px;
    font-weight: 200;
    /* width:480px; */
    /* margin-right: auto;
    margin-left: auto */
}

/* .app-qrcode{
    display: block;
    padding-top: 50px;
    width:300px;
    margin-right: auto;
    margin-left: auto
} */

.app-other-item{
    background: #f5f5f5 url(../images/worldmap.png); 
    background-repeat: no-repeat;
}


.button-box{
    padding-top: 20px;
}


.correct-box{
    /* width:320px; */
    min-height: 650px;
}

.input-box {
    margin-top: 100px;
    vertical-align:middle; /* 居中对齐， */ 
    font-size:14px; 
    /* border:1px solid #000 */
}

.output-box{
    margin-top: 20px;
    vertical-align:middle; /* 居中对齐， */ 
    font-size:14px; 
    border:1px solid #cee3e9;
    background:#f1f7f9;
    min-height: 100px;
}

.output-box p{
    float:left;
}

.correct-button-box {
    margin-top: 20px;
    /* border:1px solid #000 */
}

